# GlucoX

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  chat.py  predict.py  records.py  reports.py
backend/app/ml/: training.py
backend/app/ocr/: extractor.py
backend/app/prisma_client/: actions.py  bases.py  client.py  enums.py  metadata.py  models.py  schema.prisma  types.py
backend/app/schemas/: auth.py  chat.py  prediction.py  record.py  report.py
backend/app/services/: auth_service.py  chat_service.py  explainability_service.py  history_service.py  insight_service.py  model_service.py  prediction_service.py  report_service.py
backend/app/utils/: config.py  database.py  logger.py  security.py
backend/prisma/: schema.prisma
backend/scripts/: train_model.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/advanced/: page.tsx
frontend/app/assistant/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/layout/: page-shell.tsx  site-header.tsx  theme-toggle.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  textarea.tsx
frontend/features/advanced/: advanced-view.tsx  (+2 more)
frontend/lib/: api.ts  auth-context.tsx  health-export.ts  theme.ts  types.ts
frontend/styles/: theme.css
(+17 files in other folders)
